raffia/tests/error/scss/at-rule/forward/with-namespace-variable.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `<ident>`
  ┌─ with-namespace-variable.scss:1:24
  │
1 │ @forward "other" with (a.$b: c);
  │                        ^


